# clsi

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  THANKS  aclocal.m4  configure  configure.ac  scim-chinese-standard.spec
src/: Makefile.am  Makefile.in  global.h  standard_helper.cpp  standard_helper.h  standard_helper_module.cpp  standard_helper_module.h  standard_im.h  standard_im_imengine.cpp  standard_im_imengine.h  standard_im_keys.h  standard_im_module.cpp  standard_im_module.h
